# storage-rust-bindings

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  android_build.env  build.rs  build_android.rs  build_android.sh  clean_build_artifacts.sh  lefthook.yml  mise.toml  revert_patches.sh
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  check.yml  publish.yml  test-sanitizers.yml
android-patches/arm64/atomics/: cpu_relax_arm64.patch
android-patches/arm64/fixes/: rand_type_fix.patch  secp256k1_asm_disable.patch
android-patches/arm64/intrinsics/: addcarry_subborrow_android_fix.patch  bearssl_android_fix.patch  bitops_android_fix.patch  countbits_android_fix.patch  cpudetect_x86_android_fix.patch  multiplexers_android_fix.patch  simd_x86_android_fix.patch
android-patches/arm64/multicodec/: multicodec_android_exts.patch
android-patches/arm64/terminal/: terminal_android_fix.patch
android-patches/shared/barriers/: barriers_android_pthread_fix.patch
android-patches/shared/bearssl/: add_android_mk.patch  csources_android_fix.patch  single_unix_mk_android_detection.patch  unix_mk_cross_compilation.patch
android-patches/shared/circom/: circomcompat_android_target.patch
android-patches/shared/circom-compat-ffi/: circom_compat_android_cross_compile.patch
android-patches/shared/config/: config_nims_android.patch
android-patches/shared/leopard/: leopard_aligned_alloc_android_fix.patch  leopard_cmake_android_fix.patch
android-patches/shared/leveldb/: leveldb_android_build_fix.patch
android-patches/shared/natpmp/: libnatpmp_android_fix.patch
android-patches/shared/nimcrypto/: nimcrypto_explicit_bzero_fix.patch
android-patches/shared/nimruntime/: cmdline_symbols_android_fix.patch
android-patches/shared/posix/: android_fix_h.patch  android_stubs_c.patch
android-patches/shared/taskpools/: taskpools_aligned_alloc_android_fix.patch  taskpools_android_cpu_relax.patch  taskpools_remove_conflicting_cpu_relax.patch
android-patches/shared/terminal/: android_terminal_fix_h.patch  terminal_android_nim.patch
android-patches/x86_64/fixes/: rand_type_fix.patch  secp256k1_asm_disable.patch
android-patches/x86_64/intrinsics/: countbits_android_fix.patch
docs/: RUST_BINDINGS_REFERENCE.md
examples/: basic_usage.rs  chunk_operations.rs  debug_config.rs  debug_operations.rs  end_to_end_test.rs  minimal_test.rs  p2p_networking.rs  simple_config_test.rs  simple_test.rs  storage_management.rs  two_node_network.rs  upload_test.rs
src/: bridge.h  build_integration.rs  callback.rs  error.rs  lib.rs  patch_system.rs  types.rs
src/debug/: logging.rs  mod.rs  node.rs  operations.rs  peer.rs
src/download/: basic.rs  chunks.rs  manifest.rs  mod.rs  operations.rs  session.rs  stream.rs  streaming.rs  types.rs
src/ffi/: mod.rs  send_safe.rs
src/node/: config.rs  lifecycle.rs  mod.rs
src/p2p/: connection.rs  discovery.rs  mod.rs  operations.rs  types.rs
src/storage/: crud.rs  mod.rs  operations.rs  space.rs  types.rs
src/upload/: advanced.rs  basic.rs  chunks.rs  file.rs  mod.rs  operations.rs  session.rs  streaming.rs  types.rs
src_build/: bindings.rs  build_android.rs  cache.rs  checksum.rs  cmdline.rs  cmdline_symbols.c  download.rs  github.rs  linker.rs  local.rs  mod.rs  parallelism.rs  prebuilt.rs  remote.rs  targets.rs  urls.rs  version.rs
tests/: basic_usage.rs  chunk_operations.rs  debug_operations.rs  memory_safety.rs  mod.rs  p2p_networking.rs  patch_system_tests.rs  storage_management.rs  thread_safe_tests.rs  thread_safety.rs  two_node_network.rs
