[package]
name = "codex-bindings"
version = "0.1.3-android-1"
edition = "2021"
description = "Rust bindings for Codex, the Decentralized Durability Engine"
license = "MIT"
repository = "https://github.com/nipsysdev/codex-rust-bindings"
homepage = "https://codex.storage"
keywords = ["codex", "storage", "p2p", "distributed"]
categories = ["api-bindings", "network-programming"]
exclude = ["vendor/nim-codex/*"]

[lib]
name = "codex_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"
bytesize = "2.1"
futures = "0.3"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }

[dependencies.tokio]
version = "1"
features = ["macros", "io-util", "rt", "rt-multi-thread"]
optional = true

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
cc = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.23"
tokio-test = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["macros", "io-util", "rt-multi-thread"] }

[features]
default = ["tokio", "static-linking"]
static-linking = []
dynamic-linking = []
