[package]
name = "storage-bindings"
version = "0.2.0"
edition = "2021"
description = "Rust bindings for Storage, the Decentralized Durability Engine"
license = "MIT"
repository = "https://github.com/nipsysdev/storage-rust-bindings"
homepage = "https://logos.co/tech-stack"
keywords = ["storage", "p2p", "distributed"]
categories = ["api-bindings", "network-programming"]

# Prebuilt binary version pinning
# Set this to a specific version from https://github.com/nipsysdev/logos-storage-nim-bin/releases
# Format: <branch>-<commit-hash> (e.g., "master-60861d6a")
# Leave empty or comment out to use the latest release
[package.metadata.prebuilt]
libstorage = "master-52d2748"

[lib]
name = "storage_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
bytesize = "2.1"
futures = "0.3"

[dependencies.tokio]
version = "1"
features = ["macros", "io-util", "rt", "rt-multi-thread"]
optional = true

[build-dependencies]
bindgen = "0.72"
reqwest = { version = "0.12", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
cc = "1.2"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.23"
env_logger = "0.10"
tokio = { version = "1", features = [
    "macros",
    "io-util",
    "rt-multi-thread",
    "time",
] }

[features]
default = ["tokio"]
